# Andrej-Karpathy-Zero-To-Hero

./: README.md  exercises.md  makemore_learnings.md  poetry.toml  pyproject.toml
nbs/: 01_lecture_micrograd_exercises.ipynb  02_lecture_exercises_trigram.ipynb  02_lecture_makemore_bigram.ipynb  03_lecture_makemore_mlp.ipynb  04_lecture_exercises.ipynb  04_lecture_makemore_#3_bn.ipynb  05_lecture_build_makemore_backprop_ninja.ipynb  06_lecture_wavenet.ipynb  07_coding_self_attention.ipynb
