[tool.poetry]
name = "from-zero-to-hero"
version = "0.1.0"
description = ""
authors = ["Christian Baumberger <chribabe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.26.1"
matplotlib = "^3.8.1"
ipykernel = "^6.26.0"
scikit-learn = "^1.3.2"
graphviz = "^0.20.1"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
